fix img about section head  on mobile

--- a/src/components/section/about/about.module.css
+++ b/src/components/section/about/about.module.css
@@ -15,10 +15,13 @@
 }
 
 .aboutImage img{
+    width: 100%;
+    height: 100%;
     max-width: 345px;
     max-height: 477px;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    object-fit: cover;
 }
 
 .aboutText{
